--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "build": "cd android && gradlew assembleRelease && cd ..",
+    "clean": "cd android && gradlew clean && cd .."
   },
   "dependencies": {
+    "moment": "^2.24.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.5.2",
@@ -26,14 +29,14 @@
     "@babel/core": "^7.7.7",
     "@babel/runtime": "^7.7.7",
     "@react-native-community/eslint-config": "^0.0.5",
-    "babel-jest": "^24.9.0",
     "babel-eslint": "^10.0.3",
+    "babel-jest": "^24.9.0",
     "babel-preset-flow": "^6.23.0",
     "eslint": "^6.8.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.5.1",
     "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.5.1",
     "eslint-plugin-react-native": "^3.2.1",
     "flow-bin": "^0.83.0",
     "jest": "^24.9.0",
